# samay

./: README.md
backend/: Containerfile.backend  package-lock.json  package.json  tsconfig.json
backend/src/: app.module.ts  health.controller.ts  main.ts
backend/src/common/decorators/: roles.decorator.ts
backend/src/common/dto/: optimize.dto.ts
backend/src/common/guards/: roles.guard.ts  team.guard.ts
backend/src/config/: data-source.ts
backend/src/migrations/: 1733840000000-InitialSchema.ts
backend/src/modules/auth/: auth.controller.ts  auth.module.ts
backend/test/: availability.service.spec.ts  jest-e2e.json  roster.e2e-spec.ts  shift.service.spec.ts
docs/: ARCHITECTURE.md  DEMO_ACCOUNTS.md
frontend/: Containerfile.frontend  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Header.tsx  Layout.tsx  OptimizationPanel.tsx  ProtectedRoute.tsx  RosterBuilder.tsx  ShiftDetailModal.tsx  Sidebar.tsx
frontend/src/hooks/: useSocketConnection.ts
frontend/src/lib/: api.ts
frontend/src/pages/: LoginPage.tsx  SignUpPage.tsx
frontend/src/stores/: authStore.ts  rosterStore.ts  themeStore.ts
infra/: Makefile  podman-compose.yml  seed.sql
infra/examples/: optimize-request.json  optimize-response-infeasible.json  optimize-response-optimal.json
solver/: Containerfile.solver  pyproject.toml  requirements.txt
solver/app/: __init__.py  main.py  models.py  optimize.py
solver/tests/: __init__.py  test_optimize.py
(+34 files in other folders)
